--- a/templates/index.html
+++ b/templates/index.html
@@ -30,22 +30,14 @@
         </form>
 
         <div class="buttons">
-            <button class="botton btn-prev"> &lt;&lt;</button>
-            <button class="botton btn-next">&gt;&gt;</button>
+            <button class="button btn-prev"> &lt;&lt;</button>
+            <button class="button btn-next">&gt;&gt;</button>
         </div>
 
         <img src="https://media.discordapp.net/attachments/837122788179443792/1185709039968063498/pokedex.png"
             alt="pokedex" class="pokedex">
 
     </main>
-
-    <div class="type-buttons">
-        <button class="type-button normal" id="btn-normal">Normal</button>
-        <button class="type-button grass" id="btn-grass">Grass</button>
-        <button class="type-button fire" id="btn-fire">Fire</button>
-        <!-- Adicione outros botões de tipo semelhantemente -->
-        <button class="type-button reset" id="btn-reset">Reset</button>
-    </div>
 </body>
 
 </html>
